# react-native-live-markdown

./: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  .yarnrc.yml  CONTRIBUTING.md  LICENSE  README.md  RNLiveMarkdown.podspec  babel.config.js  constants.ts  lefthook.yml  package-lock.json  package.json  react-native-live-markdown.podspec  react-native-markdown-text-input.podspec  react-native.config.js  testConstants.ts  tsconfig.build.json  tsconfig.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-android.yml  build-ios.yml  build-web.yml  check-root.yml  check.yml  cla.yml  e2e-test.yml  lint.yml  publish.yml  static-checks-src.yml  static-checks-subdirectories.yml  web-e2e-test.yml
.yarn/patches/: @react-native-gradle-plugin-npm-0.73.4-6535082666.patch  expensify-common-https-33096e5e52.patch  expensify-common-https-ae2a96d818.patch  expensify-common-npm-2.0.29-e0d11647e6.patch  expensify-common-npm-2.0.34-4dc6edf065.patch  expensify-common-npm-2.0.35-468942f705.patch  expensify-common-npm-2.0.44-b3ede396cb.patch  expensify-common-npm-2.0.46-b5339121cc.patch  expensify-common-npm-2.0.48-ed21b3616e.patch  expensify-common-npm-2.0.49-49c1fa1dd2.patch  expensify-common-npm-2.0.53-128e9eb7ac.patch  expensify-common-npm-2.0.54-a44d85c9ec.patch  html-entities-npm-2.5.2-0b6113e376.patch  link-npm-2.1.1-1c9fea076e.patch  react-native-npm-0.73.4-297ae78b8f.patch  react-native-npm-0.74.5-3cfd406787.patch  react-native-npm-0.75.2-bbf00acd5a.patch  (+1 more)
WebExample/: .gitignore  App.tsx  app.json  babel.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  webpack.config.js
android/: build.gradle  gradle.properties  proguard-rules.pro
android/src/main/cpp/: CMakeLists.txt  LiveMarkdownModule.cpp  LiveMarkdownModule.h  MarkdownParser.cpp  MarkdownParser.h  MarkdownUtils.cpp  MarkdownUtils.h  OnLoad.cpp
android/src/main/new_arch/: CMakeLists.txt  MarkdownCommitHook.cpp  MarkdownCommitHook.h  NativeProxy.cpp  NativeProxy.h  OnLoad.cpp  RNLiveMarkdownSpec.cpp  RNLiveMarkdownSpec.h
android/src/main/new_arch/react/renderer/components/RNLiveMarkdownSpec/: MarkdownTextInputDecoratorShadowNode.cpp  MarkdownTextInputDecoratorShadowNode.h  MarkdownTextInputDecoratorState.h
apple/: BlockquoteTextLayoutFragment.h  BlockquoteTextLayoutFragment.mm  LiveMarkdownModule.h  LiveMarkdownModule.mm  MarkdownBackedTextInputDelegate.h  MarkdownBackedTextInputDelegate.mm  MarkdownCommitHook.h  MarkdownCommitHook.mm  MarkdownFormatter.h  MarkdownFormatter.mm  MarkdownLayoutManager.h  MarkdownLayoutManager.mm  MarkdownParser.h  MarkdownParser.mm  MarkdownRange.h  MarkdownRange.mm  MarkdownTextFieldObserver.h  MarkdownTextFieldObserver.mm  MarkdownTextInputDecoratorComponentView.h  MarkdownTextInputDecoratorComponentView.mm  MarkdownTextInputDecoratorShadowNode.h  MarkdownTextInputDecoratorShadowNode.mm  MarkdownTextInputDecoratorView.h  MarkdownTextInputDecoratorView.mm  MarkdownTextInputDecoratorViewManager.mm  MarkdownTextLayoutFragment.h  MarkdownTextLayoutFragment.mm  MarkdownTextLayoutManagerDelegate.h  MarkdownTextLayoutManagerDelegate.mm  MarkdownTextStorageDelegate.h  MarkdownTextStorageDelegate.mm  MarkdownTextViewObserver.h  MarkdownTextViewObserver.mm  MentionBorderLayoutFragment.h  MentionBorderLayoutFragment.mm  RCTBackedTextFieldDelegateAdapter+Markdown.h  RCTBackedTextFieldDelegateAdapter+Markdown.m  RCTBackedTextFieldDelegateAdapter+Markdown.mm  RCTBaseTextInputView+Markdown.h  RCTBaseTextInputView+Markdown.m  (+19 more)
cpp/: MarkdownGlobal.cpp  MarkdownGlobal.h  RuntimeDecorator.cpp  RuntimeDecorator.h
example/: App.tsx  Gemfile  app.json  babel.config.js  metro.config.js  package.json  tsconfig.json
ios/: LiveMarkdownModule.mm  MarkdownCommitHook.h  MarkdownCommitHook.mm  MarkdownLayoutManager.h  MarkdownLayoutManager.m  MarkdownLayoutManager.mm  MarkdownShadowFamilyRegistry.cpp  MarkdownShadowFamilyRegistry.h  MarkdownTextDecoratorComponentView.h  MarkdownTextDecoratorComponentView.mm  MarkdownTextDecoratorView.h  MarkdownTextDecoratorView.mm  MarkdownTextDecoratorViewManager.h  MarkdownTextDecoratorViewManager.mm  MarkdownTextInputDecoratorComponentDescriptor.h  MarkdownTextInputDecoratorComponentView.mm  MarkdownTextInputDecoratorShadowNode.cpp  MarkdownTextInputDecoratorShadowNode.h  MarkdownTextInputDecoratorState.h  MarkdownTextInputDecoratorView.h  MarkdownTextInputDecoratorView.mm  MarkdownTextInputDecoratorViewManager.h  MarkdownTextInputDecoratorViewManager.mm  MarkdownTextInputDecoratorViewView.h  MarkdownTextInputDecoratorViewView.mm  MarkdownTextInputView.h  MarkdownTextInputView.mm  MarkdownTextInputViewManager.h  MarkdownTextInputViewManager.mm  MarkdownTextInputViewView.h  MarkdownTextInputViewView.m  MarkdownTextInputViewView.mm  RCTBackedTextFieldDelegateAdapter+Markdown.h  RCTBackedTextFieldDelegateAdapter+Markdown.m  RCTBackedTextFieldDelegateAdapter+Markdown.mm  RCTBaseTextInputShadowView+Markdown.h  RCTBaseTextInputShadowView+Markdown.m  RCTBaseTextInputView+Markdown.h  RCTBaseTextInputView+Markdown.m  RCTBaseTextInputView+Markdown.mm  (+15 more)
mock/: index.ts
parser/: babel.config.js  index.js  index.ts  out.js  package-lock.json  package.json  react-native-live-markdown-parser.js  tsconfig.json  utils.ts
patches/: html-entities+2.5.2.patch  html-entities+2.5.3.patch  react-native++metro-runtime+0.84.4.patch  react-native+0.77.0.patch  react-native+0.80.1.patch  react-native-web+0.19.13+001+RN-78-support.patch
scripts/: pod-install.cjs
src/: MarkdownStyle.ts  MarkdownText.tsx  MarkdownTextDecoratorViewNativeComponent.ts  MarkdownTextInput.native.tsx  MarkdownTextInput.tsx  MarkdownTextInput.web.tsx  MarkdownTextInputDecoratorViewNativeComponent.ts  MarkdownTextInputViewNativeComponent.ts  NativeLiveMarkdownModule.ts  NativeMarkdownModule.ts  commonTypes.ts  font-family-monospace.ios.tsx  font-family-monospace.tsx  index.tsx  is-web.native.tsx  is-web.tsx  parse.ts  parseExpensiMark.ts  rangeUtils.ts  react-native-web.d.ts  styleUtils.ts  useMarkdownParser.tsx
types/: global.d.ts
(+188 files in other folders)
